fix option wheel js and i'm done

--- a/style.css
+++ b/style.css
@@ -2,4 +2,6 @@
     display: flex;
     justify-content:  center;
   }
-  
+  body {
+    background-image: url("White-Background-Wallpaper-16577.jpg");
+  }  
